--- a/src/ru/mvideo/assystnotifier/res/loginWindow.css
+++ b/src/ru/mvideo/assystnotifier/res/loginWindow.css
@@ -17,6 +17,7 @@ root {
     -fx-font-size: 32px;
     -fx-font-family: "Arial Black";
     -fx-fill: #818181;
+    /*noinspection CssInvalidFunction*/
     -fx-effect: innershadow(three-pass-box, rgba(0, 0, 0, 0.7), 6, 0.0, 0, 2);
 }
 
