--- a/src/ru/mvideo/assystnotifier/res/loginWindow.fxml
+++ b/src/ru/mvideo/assystnotifier/res/loginWindow.fxml
@@ -12,13 +12,13 @@
         <Label id="welcome-text" text="  Welcome" GridPane.columnSpan="2" GridPane.halignment="CENTER"
                GridPane.valignment="TOP"/>
         <Label layoutX="271.0" layoutY="10.0" text="Логин:" GridPane.rowIndex="1"/>
-        <TextField GridPane.columnIndex="1" GridPane.rowIndex="1">
+        <TextField fx:id="userLogin" GridPane.columnIndex="1" GridPane.rowIndex="1">
             <GridPane.margin>
                 <Insets/>
             </GridPane.margin>
         </TextField>
         <Label layoutX="73.0" layoutY="122.0" text="Пароль:" GridPane.rowIndex="2"/>
-        <PasswordField GridPane.columnIndex="1" GridPane.rowIndex="2">
+        <PasswordField fx:id="userPassword" GridPane.columnIndex="1" GridPane.rowIndex="2">
             <GridPane.margin>
                 <Insets/>
             </GridPane.margin>
